--- a/src/Arkivverket.Arkade.GUI/Views/Settings.xaml
+++ b/src/Arkivverket.Arkade.GUI/Views/Settings.xaml
@@ -3,20 +3,39 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Arkivverket.Arkade.GUI.Views"
-        xmlns:resources="clr-namespace:Arkivverket.Arkade.GUI.Resources"
+        xmlns:coreLang="clr-namespace:Arkivverket.Arkade.Core.Languages;assembly=Arkivverket.Arkade.Core"
+        xmlns:lang="clr-namespace:Arkivverket.Arkade.GUI.Languages"
         mc:Ignorable="d"
-        Title="Settings" Height="380" Width="500"
+        Title="{x:Static lang:SettingsGUI.DialogTitle}" Height="480" Width="628"
         Icon="../Arkade5_2.0.ico"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         Background="{DynamicResource MaterialDesignPaper}"
         d:DataContext="{d:DesignData SettingsViewModel}">
     <Grid>
-        <StackPanel Margin="10">
-            <TextBlock Text="{x:Static resources:SettingsGUI.ArkadeProcessingAreaLocation_Header}"
+        <Grid.Resources>
+            <ObjectDataProvider x:Key="GetSupportedLanguages" MethodName="GetValues" ObjectType="coreLang:SupportedLanguages">
+                <ObjectDataProvider.MethodParameters>
+                    <x:Type TypeName="coreLang:SupportedLanguages"></x:Type>
+                </ObjectDataProvider.MethodParameters>
+            </ObjectDataProvider>
+        </Grid.Resources>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="140"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <StackPanel Margin="10" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+            <TextBlock Text="{x:Static lang:SettingsGUI.ArkadeProcessingAreaLocation_Header}"
                        FontSize="18" FontWeight="Bold"
                        Margin="0,0,0,10" />
-            <TextBlock Text="{x:Static resources:SettingsGUI.ArkadeProcessingAreaLocation_Info}"
+            <TextBlock Text="{x:Static lang:SettingsGUI.ArkadeProcessingAreaLocation_Info}"
                        TextWrapping="Wrap" />
             <WrapPanel HorizontalAlignment="Right"
                        Margin="0,25">
@@ -28,28 +47,46 @@
                          Background="LightGray" /><Run>\</Run><Run Text="{Binding DirectoryNameArkadeProcessingAreaRoot, Mode=OneWay}"></Run>
                 </TextBlock>
                 <Button Command="{Binding ChangeArkadeProcessingAreaLocationCommand}"
-                        Content="{x:Static resources:SettingsGUI.ArkadeProcessingAreaLocation_EditButtonText}"
+                        Content="{x:Static lang:SettingsGUI.ArkadeProcessingAreaLocation_EditButtonText}"
                         Margin="10,0,0,10" />
             </WrapPanel>
-            <TextBlock Text="{x:Static resources:SettingsGUI.ArkadeProcessingAreaLocation_Warning}"
+            <TextBlock Text="{x:Static lang:SettingsGUI.ArkadeProcessingAreaLocation_Warning}"
                        TextWrapping="Wrap"
                        FontStyle="Italic" />
-            <WrapPanel>
-                <TextBlock Text="{x:Static resources:SettingsGUI.SelectDarkModeText}"
-                           FontSize="18" FontWeight="Bold"
-                           Margin="0,15,20,15"/>
-                <CheckBox IsChecked="{Binding DarkModeSelected, Mode=TwoWay}"
-                          HorizontalAlignment="Left"
-                          Style="{StaticResource MaterialDesignActionCheckBox}"/>
-            </WrapPanel>
-            
         </StackPanel>
-        <WrapPanel HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10">
+
+        <WrapPanel Margin="10" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
+            <TextBlock Text="{x:Static lang:SettingsGUI.SelectDarkModeText}"
+                       FontSize="18" FontWeight="Bold"
+                       Margin="0,15,20,15"/>
+            <CheckBox IsChecked="{Binding DarkModeSelected, Mode=TwoWay}"
+                      HorizontalAlignment="Left"
+                      Style="{StaticResource MaterialDesignActionCheckBox}"/>
+        </WrapPanel>
+
+        <TextBlock Margin="10" Grid.Row="2" Grid.Column="0"
+                   HorizontalAlignment="Left" FontSize="18" FontWeight="Bold"
+                   Text="{x:Static lang:SettingsGUI.SelectUILanguageText}"/>
+        <ComboBox Margin="10" Grid.Row="2" Grid.Column="1"
+                  Width="90" Cursor="Hand"
+                  ItemsSource="{Binding Source={StaticResource GetSupportedLanguages}}"
+                  SelectedItem="{Binding SelectedUILanguage}"/>
+
+        <TextBlock Margin="10" Grid.Row="3" Grid.Column="0"
+                   HorizontalAlignment="Left" FontSize="18" FontWeight="Bold"
+                   Text="{x:Static lang:SettingsGUI.SelectOutputLanguageText}"/>
+        <ComboBox Margin="10" Grid.Row="3" Grid.Column="1"
+                  Width="90" Cursor="Hand"
+                  ItemsSource="{Binding Source={StaticResource GetSupportedLanguages}}"
+                  SelectedItem="{Binding SelectedOutputLanguage}"/>
+
+        <WrapPanel Margin="10" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"
+                   HorizontalAlignment="Right" VerticalAlignment="Bottom">
             <Button Click="ApplyChangesAndClose"
-                    Content="{x:Static resources:SettingsGUI.ArkadeProcessingAreaLocation_ApplyButtonText}"
+                    Content="{x:Static lang:SettingsGUI.ArkadeProcessingAreaLocation_ApplyButtonText}"
                     Width="75" />
             <Button IsCancel="True"
-                    Content="{x:Static resources:SettingsGUI.ArkadeProcessingAreaLocation_CancelButtonText}"
+                    Content="{x:Static lang:SettingsGUI.ArkadeProcessingAreaLocation_CancelButtonText}"
                     Width="75" 
                     Margin="10,0,0,0" />
         </WrapPanel>
