Use events to handle changes in UI and Output languge
ARKADE-471

--- a/src/Arkivverket.Arkade.GUI/Views/MainWindow.xaml
+++ b/src/Arkivverket.Arkade.GUI/Views/MainWindow.xaml
@@ -69,6 +69,12 @@
                     <TextBlock Text="{Binding VersionStatusMessage}" />
                 </Hyperlink>
             </TextBlock>
+
+            <TextBlock Padding="2" FontSize="10" FontStyle="Italic" Foreground="Black"
+                       HorizontalAlignment="Right" TextAlignment="Left" TextWrapping="NoWrap"
+                       Visibility="{Binding UiAndOutputLanguagesIsDifferentWarningMessageVisibility}"
+                       Text="{x:Static lang:GUI.UiAndOutputLanguagesIsDifferentWarningMessage}">
+            </TextBlock>
         </DockPanel>
         
     </Grid>
