--- a/src/Arkivverket.Arkade.GUI/Views/Settings.xaml
+++ b/src/Arkivverket.Arkade.GUI/Views/Settings.xaml
@@ -5,6 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:coreLang="clr-namespace:Arkivverket.Arkade.Core.Languages;assembly=Arkivverket.Arkade.Core"
         xmlns:lang="clr-namespace:Arkivverket.Arkade.GUI.Languages"
+        xmlns:prism="http://prismlibrary.com/"
+        prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
         Title="{x:Static lang:SettingsGUI.DialogTitle}" Height="480" Width="628"
         Icon="../Arkade5_2.0.ico"
@@ -82,7 +84,7 @@
 
         <WrapPanel Margin="10" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"
                    HorizontalAlignment="Right" VerticalAlignment="Bottom">
-            <Button Click="ApplyChangesAndClose"
+            <Button Command="{Binding ApplyChangesAndCloseWindowCommand}"
                     Content="{x:Static lang:SettingsGUI.ArkadeProcessingAreaLocation_ApplyButtonText}"
                     Width="75" />
             <Button IsCancel="True"
