--- a/src/Arkivverket.Arkade.GUI/Views/Settings.xaml
+++ b/src/Arkivverket.Arkade.GUI/Views/Settings.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="Arkivverket.Arkade.GUI.Views.Settings"
+﻿<Window x:Class="Arkivverket.Arkade.GUI.Views.Settings"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -57,7 +57,23 @@
                        FontStyle="Italic" />
         </StackPanel>
 
-        <WrapPanel Margin="10" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
+        <TextBlock Margin="10" Grid.Row="1" Grid.Column="0"
+                   HorizontalAlignment="Left" FontSize="18" FontWeight="Bold"
+                   Text="{x:Static lang:SettingsGUI.SelectUILanguageText}"/>
+        <ComboBox Margin="10" Grid.Row="1" Grid.Column="1"
+                  Width="90" Cursor="Hand"
+                  ItemsSource="{Binding Source={StaticResource GetSupportedLanguages}}"
+                  SelectedItem="{Binding SelectedUILanguage}"/>
+
+        <TextBlock Margin="10" Grid.Row="2" Grid.Column="0"
+                   HorizontalAlignment="Left" FontSize="18" FontWeight="Bold"
+                   Text="{x:Static lang:SettingsGUI.SelectOutputLanguageText}"/>
+        <ComboBox Margin="10" Grid.Row="2" Grid.Column="1"
+                  Width="90" Cursor="Hand"
+                  ItemsSource="{Binding Source={StaticResource GetSupportedLanguages}}"
+                  SelectedItem="{Binding SelectedOutputLanguage}"/>
+
+        <WrapPanel Margin="10" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2">
             <TextBlock Text="{x:Static lang:SettingsGUI.SelectDarkModeText}"
                        FontSize="18" FontWeight="Bold"
                        Margin="0,15,20,15"/>
@@ -65,22 +81,6 @@
                       HorizontalAlignment="Left"
                       Style="{StaticResource MaterialDesignActionCheckBox}"/>
         </WrapPanel>
-
-        <TextBlock Margin="10" Grid.Row="2" Grid.Column="0"
-                   HorizontalAlignment="Left" FontSize="18" FontWeight="Bold"
-                   Text="{x:Static lang:SettingsGUI.SelectUILanguageText}"/>
-        <ComboBox Margin="10" Grid.Row="2" Grid.Column="1"
-                  Width="90" Cursor="Hand"
-                  ItemsSource="{Binding Source={StaticResource GetSupportedLanguages}}"
-                  SelectedItem="{Binding SelectedUILanguage}"/>
-
-        <TextBlock Margin="10" Grid.Row="3" Grid.Column="0"
-                   HorizontalAlignment="Left" FontSize="18" FontWeight="Bold"
-                   Text="{x:Static lang:SettingsGUI.SelectOutputLanguageText}"/>
-        <ComboBox Margin="10" Grid.Row="3" Grid.Column="1"
-                  Width="90" Cursor="Hand"
-                  ItemsSource="{Binding Source={StaticResource GetSupportedLanguages}}"
-                  SelectedItem="{Binding SelectedOutputLanguage}"/>
 
         <WrapPanel Margin="10" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"
                    HorizontalAlignment="Right" VerticalAlignment="Bottom">
