Fix UI and output language mismatch warning message
ARKADE-471

--- a/src/Arkivverket.Arkade.GUI/Views/MainWindow.xaml
+++ b/src/Arkivverket.Arkade.GUI/Views/MainWindow.xaml
@@ -73,7 +73,7 @@
             <TextBlock Padding="2" FontSize="10" FontStyle="Italic" Foreground="Black"
                        HorizontalAlignment="Right" TextAlignment="Left" TextWrapping="NoWrap"
                        Visibility="{Binding UiAndOutputLanguagesIsDifferentWarningMessageVisibility}"
-                       Text="{x:Static lang:GUI.UiAndOutputLanguagesIsDifferentWarningMessage}">
+                       Text="{Binding UiAndOutputLanguagesIsDifferentWarningMessage}">
             </TextBlock>
         </DockPanel>
         
